// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render a large icon 1`] = `
.c0.fa {
  margin-right: 3px;
  font-size: 1.3125rem;
}

<Icon
  isSpinning={false}
  size="large"
  type="circle"
>
  <styled.i
    aria-hidden={true}
    className="icon fa circle"
    size="large"
  >
    <i
      aria-hidden={true}
      className="icon fa circle c0"
      size="large"
    />
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render a non-FontAwesome icon 1`] = `
.c0.fa {
  margin-right: 3px;
  font-size: 1rem;
}

<Icon
  isSpinning={false}
  size="medium"
  type="intelli-icon-avatar"
>
  <styled.i
    aria-hidden={true}
    className="icon fa intelli-icon-avatar"
    size="medium"
  >
    <i
      aria-hidden={true}
      className="icon fa intelli-icon-avatar c0"
      size="medium"
    />
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render an icon with a badge 1`] = `
.c1 {
  position: absolute;
  margin-top: -9px;
  margin-left: -15px;
}

.c0.fa {
  margin-right: 3px;
  font-size: 2rem;
}

.c2 {
  background-color: #1A2B3C;
  color: #1A293C;
  box-shadow: 0 2px 2px rgba(0,0,0,0.24);
  border: 1px solid #C5CED6;
  border-radius: 50%;
  color: #FFFFFF;
  display: inline-block;
  font-weight: 600;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2,
.c2 .fa {
  font-size: 15px;
  width: 24px;
  height: 24px;
  line-height: 24px;
}

.c2 .refresh-icon {
  background-color: transparent;
  color: #424F5C;
}

<Icon
  badge={
    <Badge
      backgroundColor="#1A2B3C"
      color="#1A293C"
      label={6}
      size="small"
    />
  }
  isSpinning={false}
  size="xlarge"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    size="xlarge"
  >
    <i
      aria-hidden={true}
      className="icon fa fa-check c0"
      size="xlarge"
    />
  </styled.i>
  <styled.span
    size="xlarge"
  >
    <span
      className="c1"
      size="xlarge"
    >
      <Badge
        backgroundColor="#1A2B3C"
        color="#1A293C"
        label={6}
        size="medium"
      >
        <styled.span
          backgroundColor="#1A2B3C"
          color="#1A293C"
          size="medium"
        >
          <span
            className="c2"
            color="#1A293C"
            size="medium"
          >
            6
          </span>
        </styled.span>
      </Badge>
    </span>
  </styled.span>
</Icon>
`;

exports[`<Icon /> should render icon with a custom size 1`] = `
.c0.fa {
  margin-right: 3px;
  font-size: 2.6rem;
}

<Icon
  customSize={2.6}
  isSpinning={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    customSize={2.6}
    size="medium"
  >
    <i
      aria-hidden={true}
      className="icon fa fa-check c0"
      size="medium"
    />
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render icon with colour 1`] = `
.c0 {
  color: #1A2B3C;
}

.c0.fa {
  margin-right: 3px;
  font-size: 1rem;
}

<Icon
  color="#1A2B3C"
  isSpinning={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    color="#1A2B3C"
    size="medium"
  >
    <i
      aria-hidden={true}
      className="icon fa fa-check c0"
      color="#1A2B3C"
      size="medium"
    />
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render icon with no size or colour 1`] = `
.c0.fa {
  margin-right: 3px;
  font-size: 1rem;
}

<Icon
  isSpinning={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    size="medium"
  >
    <i
      aria-hidden={true}
      className="icon fa fa-check c0"
      size="medium"
    />
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render icon with size 1`] = `
.c0.fa {
  margin-right: 3px;
  font-size: 1rem;
}

<Icon
  isSpinning={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    size="medium"
  >
    <i
      aria-hidden={true}
      className="icon fa fa-check c0"
      size="medium"
    />
  </styled.i>
</Icon>
`;
